@startuml
'https://plantuml.com/class-diagram
hide empty members
skinparam linetype ortho

class Context {
    + __construct(Algorithm $algorithm)
    + executeStrategy($num1, $num2)
}

interface Algorithm {
    + doOperation(($num1, $num2))
}

class AddAlgorithm implements Algorithm {
    + doOperation(($num1, $num2))
}

class SubtractionAlgorithm implements Algorithm {
    + doOperation(($num1, $num2))
}

class MultiplicationAlgorithm implements Algorithm {
    + doOperation(($num1, $num2))
}

Context::executeStrategy <-- Algorithm::doOperation
Context::__construct --> Algorithm

@enduml